resolved color contrast issues

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --primary-color: #004346;
+    --primary-color: #004336;
     --secondary-color: #508991;
     --accent1-color: #75DDDD;
     --accent2-color: #09BC8A;
