--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,7 +16,7 @@ body {
 }
 
 :root {
-    --primary-color: #004346;
+    --primary-color: #004336;
     --secondary-color: #508991;
     --accent1-color: #75DDDD;
     --accent2-color: #09BC8A;
